--- a/src/components/FooterStyle/style.css
+++ b/src/components/FooterStyle/style.css
@@ -1,5 +1,6 @@
 #footer {
     position: absolute;
+    background-color: black;
     bottom: 0;
     width: 100%;
     height: 2.5rem;            /* Footer height */
