MVP Portfolio page completed using bootstrap for react and cards.

--- a/src/pages/css/style.css
+++ b/src/pages/css/style.css
@@ -7,6 +7,10 @@
     border-width: 8px !important;
 }
 
+.Hero {
+    margin-bottom: 0;
+}
+
 #portrait {
     border: 2px solid #17A2B8;
     width: auto;
