--- a/src/components/FooterStyle/style.css
+++ b/src/components/FooterStyle/style.css
@@ -3,5 +3,6 @@
     background-color: black;
     bottom: 0;
     width: 100%;
+    bottom: 0;
     height: 2.5rem;            /* Footer height */
   }
