Revised the size of the navbar font awesome icons

--- a/src/pages/css/style.css
+++ b/src/pages/css/style.css
@@ -11,6 +11,10 @@
     margin-bottom: 0;
 }
 
+.background {
+    background-color: #030806;
+}
+
 #portrait {
     border: 2px solid #17A2B8;
     width: auto;
