--- a/src/components/NavigationBar/style.css
+++ b/src/components/NavigationBar/style.css
@@ -4,4 +4,5 @@ nav.navbar.navbar-default {
 
 h5 {
   color: white;
+  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
 }
