--- a/src/components/NavigationBar/style.css
+++ b/src/components/NavigationBar/style.css
@@ -6,3 +6,16 @@ h5 {
   color: white;
   font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
 }
+
+.avatar {
+  display: block;
+  border-radius: 45px;
+  box-sizing: border-box;
+  background-color: #DDD;
+  border: 5px solid #cfd8dc;
+}
+
+img {
+  height: 45px;
+  width: 45px
+}
